src/main/resources/yamls/hpa-service.yaml
#apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31000
  selector:
    run: php-apache
